--- a/amgx_code/fortran_codes/Makefile
+++ b/amgx_code/fortran_codes/Makefile
@@ -1,5 +1,5 @@
-FORT= gfortran
-LIB_D = -L/home/divyaprakash/my_projects/fortarn_c_wrapper/amgx_code/heat_transfer_lib
+FORT= f95
+LIB_D = -L/home/am/phd/amz208461/my_projects/wrappers/amgx_code/heat_transfer_lib
 LIB_L = -lht
 
 
@@ -15,4 +15,4 @@ amgx_ht2d.o: amgx_ht2d.f90 Makefile
 	$(FORT) -c $<
 
 clean:
-	rm -f amgx_ht2d *.mod *.bak *~ $(OBJECTS) 
+	rm -f solveaxb *.mod *.bak *~ $(OBJECTS) 
